--- a/build.gradle
+++ b/build.gradle
@@ -49,7 +49,7 @@ dependencies {
     compile("org.apache.commons:commons-lang3:3.3.2")
     compile("com.google.guava:guava:14.0.1")
     compile("com.h2database:h2:1.3.175")
-//  compile("org.hsqldb:hsqldb:2.3.2")
+  compile("org.hsqldb:hsqldb:2.3.2")
 
     testCompile("org.springframework.boot:spring-boot-starter-test")
 }
