--- a/build.gradle
+++ b/build.gradle
@@ -13,7 +13,9 @@ buildscript {
 apply plugin: 'java'
 apply plugin: 'eclipse'
 apply plugin: 'org.springframework.boot'
+apply plugin: 'application'
 
+mainClassName = 'com.enlivencloud.EnlivencloudApplication'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = 1.8
 
@@ -25,5 +27,11 @@ repositories {
 dependencies {
 	compile('org.springframework.boot:spring-boot-starter-thymeleaf')
 	compile('org.springframework.boot:spring-boot-starter-web')
+    compile('org.springframework.boot:spring-boot-starter-mail')
+    compile('org.springframework.boot:spring-boot-starter-security')
+    compile('org.webjars:bootstrap:3.3.6')
+    compile('org.webjars:jquery:2.1.4')
+    compile('ch.qos.logback:logback-classic')
+    compile('org.thymeleaf.extras:thymeleaf-extras-springsecurity4:2.1.2.RELEASE')
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 }
