--- a/build.gradle
+++ b/build.gradle
@@ -1,59 +1,51 @@
 buildscript {
-    repositories {
-                mavenLocal()
-        mavenCentral()
-                maven {
-                        url "http://repo.spring.io/milestone"
-                }
-    }
-    dependencies {
-        classpath("org.springframework.boot:spring-boot-gradle-plugin:1.0.2.RELEASE")
-    }
+	ext {
+		springBootVersion = '1.5.6.RELEASE'
+	}
+	repositories {
+		mavenCentral()
+	}
+	dependencies {
+		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
+	}
 }
 
 apply plugin: 'java'
-apply plugin: 'eclipse'
-apply plugin: 'idea'
-apply plugin: 'spring-boot'
+apply plugin: 'eclipse-wtp'
+apply plugin: 'org.springframework.boot'
 apply plugin: 'war'
 
-jar {
-    baseName = 'demo-portal'
-    version = '0.0.1-SNAPSHOT'
-}
+version = '0.0.1-SNAPSHOT'
+sourceCompatibility = 1.8
 
 repositories {
-    mavenLocal()
-    mavenCentral()
-    maven {
-      url "http://repo.spring.io/milestone"
-    }
+	mavenCentral()
+}
+
+configurations {
+	providedRuntime
+}
+
+ext {
+	stormpathVersion = '1.5.5'
 }
 
 dependencies {
-    compile("org.springframework.boot:spring-boot-starter-web")
-    compile("org.springframework.boot:spring-boot-starter-actuator")
-    compile("org.springframework.boot:spring-boot-starter-data-jpa")
-    compile("org.springframework.boot:spring-boot-starter-security")
-    compile("org.springframework.boot:spring-boot-starter-thymeleaf")
-    compile("org.springframework.social:spring-social-security:1.1.0.RELEASE")
-    compile("org.springframework.social:spring-social-config:1.1.0.RELEASE")
-    compile("org.springframework.social:spring-social-facebook:1.1.0.RELEASE")
-    compile("org.springframework.social:spring-social-twitter:1.1.0.RELEASE")
-    compile("org.springframework.social:spring-social-linkedin:1.0.0.RELEASE")
-    compile("org.springframework.social:spring-social-github:1.0.0.M4")
-    compile("org.springframework.social:spring-social-google:1.0.0.RELEASE")
-    compile("org.springframework.social:spring-social-live:1.0.0-SNAPSHOT") {
-        exclude group: 'javax.servlet', module: 'servlet-api'
-    }
-    compile("org.apache.commons:commons-lang3:3.3.2")
-    compile("com.google.guava:guava:14.0.1")
-    compile("com.h2database:h2:1.3.175")
-  compile("org.hsqldb:hsqldb:2.3.2")
-
-    testCompile("org.springframework.boot:spring-boot-starter-test")
+	compile('org.springframework.boot:spring-boot-starter-data-jpa')
+	compile('org.springframework.boot:spring-boot-starter-social-facebook')
+	compile('org.springframework.boot:spring-boot-starter-social-linkedin')
+	compile('org.springframework.boot:spring-boot-starter-social-twitter')
+	compile('com.stormpath.spring:stormpath-default-spring-boot-starter')
+	compile('org.springframework.boot:spring-boot-starter-web')
+	compile('org.springframework.boot:spring-boot-starter-websocket')
+	compileOnly('org.projectlombok:lombok')
+	providedRuntime('org.springframework.boot:spring-boot-starter-tomcat')
+	testCompile('org.springframework.boot:spring-boot-starter-test')
+	testCompile('org.springframework.restdocs:spring-restdocs-mockmvc')
 }
 
-task wrapper(type: Wrapper) {
-    gradleVersion = '1.12'
+dependencyManagement {
+	imports {
+		mavenBom "com.stormpath.sdk:stormpath-bom:${stormpathVersion}"
+	}
 }
