--- a/build.gradle
+++ b/build.gradle
@@ -13,9 +13,8 @@ buildscript {
 apply plugin: 'java'
 apply plugin: 'eclipse'
 apply plugin: 'org.springframework.boot'
-apply plugin: 'application'
+apply plugin: 'war'
 
-mainClassName = 'com.enlivencloud.EnlivencloudApplication'
 
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = 1.8
